[package]
name = "ios-log-decrypt"
description = "Decrypt iOS logs"
license = "MIT"
repository = "https://github.com/PaulmannLighting/ios-log-decrypt"
keywords = ["iOS", "log", "decrypt"]
categories = ["command-line-utilities"]
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hex = "0.4.3"
generic-array = "1.0.0"
